--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -24,7 +24,7 @@
         <!-- Weight Column -->
         <ng-container matColumnDef="img">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Image</th>
-            <td mat-cell *matCellDef="let element"> <img src="assets/emo.png" alt=""> </td>
+            <td mat-cell *matCellDef="let element"> <img style="width: 40px;" src="assets/emo.png" alt=""> </td>
         </ng-container>
 
         <!-- Symbol Column -->
