--- a/src/app/add-item/add-item.component.html
+++ b/src/app/add-item/add-item.component.html
@@ -1,33 +1,28 @@
-<h1 mat-dialog-title fxLayoutAlign="center center">Add New item</h1>
+<h1 mat-dialog-title fxLayoutAlign="center center">Update item</h1>
 
 <div mat-dialog-content class="parent">
-    <div class="child" >
-        <form   >
+    <div class="child">
+        <form #f="ngForm">
             <mat-form-field appearance="fill">
                 <mat-label>Title</mat-label>
-                <input matInput>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>Categories</mat-label>
-                <mat-select>
-                    <mat-option value="one">First option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                </mat-select>
+                <input matInput #name >
             </mat-form-field>
             <mat-form-field appearance="fill" floatLabel="always">
                 <mat-label>Price</mat-label>
-                <input matInput type="number" placeholder="0">
+                <input matInput type="text" #price placeholder="0" >
                 <span matTextPrefix>$&nbsp;</span>
                 <span matTextSuffix>.00</span>
             </mat-form-field>
             <mat-form-field appearance="fill">
-                <mat-label>Description</mat-label>
-                <textarea matInput></textarea>
+                <mat-label> Description </mat-label>
+                <textarea matInput #desc ></textarea>
             </mat-form-field>
-            <input type="file" name="" id="">
+
+            <!-- <img style="width: 100px;" src="{{product?.data.photo}}" alt=""> -->
+            <input style="margin-left: 30px;" type="file" (change)="onSelect($event)">
             <div mat-dialog-actions fxLayoutAlign="center center">
-                <button mat-raised-button cdkFocusInitial mat-dialog-close type="submit" color="primary">submit</button>
+                <button mat-raised-button cdkFocusInitial mat-dialog-close type="submit" color="primary"
+                    (click)="create(name.value , price.value , desc.value)">CreateItem</button>
                 <button mat-raised-button cdkFocusInitial mat-dialog-close type="submit" color="accent">Cancel</button>
             </div>
         </form>
