--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -9,11 +9,7 @@
 <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
 
-        <!-- Position Column -->
-        <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-        </ng-container>
+        
 
         <!-- Name Column -->
         <ng-container matColumnDef="title">
@@ -24,30 +20,26 @@
         <!-- Weight Column -->
         <ng-container matColumnDef="img">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Image</th>
-            <td mat-cell *matCellDef="let element"> <img style="width: 40px;" src="assets/emo.png" alt=""> </td>
+            <td mat-cell *matCellDef="let element"> <img style="width: 40px;" src="{{element.photo}}" alt=""> </td>
         </ng-container>
 
         <!-- Symbol Column -->
         <ng-container matColumnDef="desc">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.description}} </td>
         </ng-container>
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="cat">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Categories </th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-        </ng-container>
+       
         <!-- Symbol Column -->
         <ng-container matColumnDef="price">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.price}} </td>
         </ng-container>
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef> </th>
             <td mat-cell *matCellDef="let row">
                 <div class="icon">
-                    <button mat-icon-button color="primary" (click)="update()"> <mat-icon>launch</mat-icon> </button>
-                    <button mat-icon-button color="warn"> <mat-icon>delete</mat-icon> </button>
+                    <button mat-icon-button color="primary" (click)="id=row._id"  (click)="update()"> <mat-icon>launch</mat-icon> </button>
+                    <button mat-icon-button color="warn" (click)="delete(row._id)"> <mat-icon>delete</mat-icon> </button>
                 </div>
             </td>
         </ng-container>
