--- a/src/app/update-item/update-item.component.html
+++ b/src/app/update-item/update-item.component.html
@@ -2,32 +2,27 @@
 
 <div mat-dialog-content class="parent">
     <div class="child">
-        <form>
+        <form #f="ngForm">
             <mat-form-field appearance="fill">
                 <mat-label>Title</mat-label>
-                <input matInput>
-            </mat-form-field>
-            <mat-form-field appearance="fill">
-                <mat-label>Categories</mat-label>
-                <mat-select>
-                    <mat-option value="one">First option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                    <mat-option value="two">Second option</mat-option>
-                </mat-select>
+                <input matInput  #name [value]="product?.data.name">
             </mat-form-field>
             <mat-form-field appearance="fill" floatLabel="always">
                 <mat-label>Price</mat-label>
-                <input matInput type="number" placeholder="0">
+                <input matInput type="text"  #price placeholder="0" [value]="product?.data.price">
                 <span matTextPrefix>$&nbsp;</span>
                 <span matTextSuffix>.00</span>
             </mat-form-field>
             <mat-form-field appearance="fill">
                 <mat-label> Description </mat-label>
-                <textarea matInput></textarea>
+                <textarea matInput  #desc [value]="product?.data.description"></textarea>
             </mat-form-field>
-            <input type="file" name="" id="">
+            
+            <img style="width: 100px;" src="{{product?.data.photo}}" alt="">
+            <input style="margin-left: 30px;" type="file" (change)="onSelect($event)" >
             <div mat-dialog-actions fxLayoutAlign="center center">
-                <button mat-raised-button cdkFocusInitial mat-dialog-close type="submit" color="primary">Update</button>
+                <button mat-raised-button cdkFocusInitial mat-dialog-close type="submit" color="primary"
+                (click)="update(name.value , price.value , desc.value)">Update</button>
                 <button mat-raised-button cdkFocusInitial mat-dialog-close type="submit" color="accent">Cancel</button>
             </div>
         </form>
