--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="page" fxLayoutAlign="center center">
     <mat-card class="mat-elevation-z12" fxFlex.sm="80%" fxFlex.xs="100%">
         <mat-card-title style="text-align:center;" fxLayoutGap="10px">
-            <img style="width: 100%;" src="assets\heading-img.png" alt="">
+            <img style="width: 100%;" src="assets\WhatsApp Image 2023-02-24 at 10.23.44 AM.jpeg" alt="">
 
         </mat-card-title>
         <mat-tab-group mat-stretch-tabs animationDuration="400ms" color="primary">
