--- a/src/app/error/error.component.css
+++ b/src/app/error/error.component.css
@@ -2,6 +2,8 @@
     padding: 40px 0;
     background: #fff;
     font-family: 'Arvo', serif;
+    width: 100%;
+    
 }
 
 .page_404 img {
@@ -9,7 +11,7 @@
 }
 
 .four_zero_four_bg {
-
+    margin-left: 100px;
     background-image: url(https://cdn.dribbble.com/users/285475/screenshots/2083086/dribbble_1.gif);
     height: 400px;
     background-position: center;
@@ -27,11 +29,11 @@
 .link_404 {
     color: #fff !important;
     padding: 10px 20px;
-    background: #39ac31;
+    background: #515651;
     margin: 20px 0;
     display: inline-block;
 }
 
 .contant_box_404 {
-    margin-top: -50px;
+    margin-top: -40px;
 }
