--- a/src/app/toolbar/toolbar.component.css
+++ b/src/app/toolbar/toolbar.component.css
@@ -136,8 +136,8 @@ mat-toolbar {
 
 .user {
     position: relative;
-    width: 40px;
-    height: 40px;
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     overflow: hidden;
     cursor: pointer;
@@ -146,7 +146,7 @@ mat-toolbar {
 .user img {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 7px;
     width: 100%;
     height: 100%;
     object-fit: cover;
