--- a/src/app/update-item/update-item.component.html
+++ b/src/app/update-item/update-item.component.html
@@ -9,7 +9,7 @@
             </mat-form-field>
             <mat-form-field appearance="fill" floatLabel="always">
                 <mat-label>Price</mat-label>
-                <input matInput type="text"  #price placeholder="0" [value]="product?.data.price">
+                <input matInput type="number"  #price placeholder="0" [value]="product?.data.price">
                 <span matTextPrefix>$&nbsp;</span>
                 <span matTextSuffix>.00</span>
             </mat-form-field>
