--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -29,8 +29,8 @@
                         <mat-form-field appearance="fill">
                             <mat-label>Select</mat-label>
                             <mat-select  (selectionChange)="Status( $event.value , item._id)">
-                                <mat-option value="Pendding">Pendding</mat-option>
-                                <mat-option value="delivered">Delivered</mat-option>
+                                <mat-option value="pending">Pending</mat-option>
+                                <mat-option value="accepted">Accepted</mat-option>
                                 <mat-option value="rejected">Rejected</mat-option>
                             </mat-select>
                         </mat-form-field></td>
