--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -5,7 +5,7 @@
             <h2>Recent Orders</h2>
 
         </div>
-        
+
         <table>
             <thead>
                 <tr>
@@ -19,7 +19,7 @@
             </thead>
             <tbody>
                 <tr *ngFor="let item of orderInfo">
-                    
+
                     <td>{{item.userId?.username}}</td>
                     <td>{{item.productId?.name}}</td>
                     <td>{{item.totalPrice}}</td>
@@ -28,15 +28,17 @@
                     <td class="list">
                         <mat-form-field appearance="fill">
                             <mat-label>Select</mat-label>
-                            <mat-select  (selectionChange)="Status( $event.value , item._id)">
-                                <mat-option value="pending">Pending</mat-option>
+                            <mat-select (selectionChange)="Status( $event.value , item._id)">
+                                <mat-option value="pending">Pendding</mat-option>
                                 <mat-option value="accepted">Accepted</mat-option>
                                 <mat-option value="rejected">Rejected</mat-option>
                             </mat-select>
-                        </mat-form-field></td>
+                        </mat-form-field>
+                    </td>
                 </tr>
 
-                <mat-spinner style=" position: absolute; top: 0; left: 0; transform: translate(30vw,30vh);" *ngIf ="orderInfo.length == 0"></mat-spinner>
+                <mat-spinner style=" position: absolute; top: 0; left: 0; transform: translate(30vw,30vh);"
+                    *ngIf="orderInfo.length == 0"></mat-spinner>
 
             </tbody>
         </table>
