--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -38,7 +38,7 @@
             <th mat-header-cell *matHeaderCellDef> </th>
             <td mat-cell *matCellDef="let row">
                 <div class="icon">
-                    <button mat-icon-button color="primary" (click)="id=row._id"  (click)="update()"> <mat-icon>launch</mat-icon> </button>
+                    <button mat-icon-button color="primary" (click)="id=row._id"  (click)="update()"> <mat-icon>update</mat-icon> </button>
                     <button mat-icon-button color="warn" (click)="delete(row._id)"> <mat-icon>delete</mat-icon> </button>
                 </div>
             </td>
